--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.4",
+    "nodemailer": "^6.9.14",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.13.0",
     "reflect-metadata": "^0.2.1",
