--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.3.2",
+    "@nestjs/schedule": "^4.0.2",
     "@prisma/client": "^5.13.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
