--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/schedule": "^4.0.2",
+    "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.13.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
